[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Player/Bullet.gd" type="Script" id=1]
[ext_resource path="res://img/pixelart/bulletShadow.png" type="Texture" id=2]
[ext_resource path="res://img/pixelart/BulletRainDrop.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="CircleShape2D" id=1]
radius = 4.12311

[sub_resource type="CircleShape2D" id=2]
radius = 85.0

[node name="Bullet" type="Area2D" groups=["Bullet", "PlayerBullet"]]
collision_layer = 0
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -27 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
hframes = 3

[node name="Color" type="Sprite" parent="Sprite"]
material = SubResource( 3 )
texture = ExtResource( 3 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )

[node name="Track" type="Area2D" parent="."]
scale = Vector2( 0.1, 0.1 )
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Track"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
rect = Rect2( -250, -250, 500, 500 )

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="area_entered" from="Track" to="." method="_on_Track_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
